k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: myflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: static
              mountPath: /code/staticfiles
              readOnly: true
            - name: media
              mountPath: /code/media
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static
          persistentVolumeClaim:
            claimName: static-data
        - name: media
          persistentVolumeClaim:
            claimName: media-data
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: myflix
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
